components/security/trivy-operator/trivy-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: trivy-system
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    app.kubernetes.io/part-of: trivy-operator
